# logseq_to_obsidian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  logseq_to_obsidian.py  pyproject.toml  tasks.py
.changelog/: +0.fixed.md  10.fixed.md  11.fixed.md  15.fixed.md  20.fixed.md  22.fixed.md  26.fixed.md  27.fixed.md  30.fixed.md  33.fixed.md  37.fixed.md  38.fixed.md  highlights.added.md  logbook-removal.added.md  logseq-property-cleanup.added.md  minor-features.added  minor-features.added.md  numbered-lists.added.md  orgmode-blocks.added.md  task-date-properties.added.md  tweet-embeds.added.md
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  tests.yml
docs/spec/: requirements.yml
src/logseq_to_obsidian/: __init__.py  __main__.py  cli.py  planner.py  transformer.py  version.py
tests/: __init__.py  conftest.py  helpers.py  reqtrace.py
tests/e2e/: test_golden_basic.py  test_preserve_times.py
tests/fixtures/logseq/basic/journals/: 2024_08_30.md
tests/fixtures/logseq/basic/logseq/: config.edn
tests/fixtures/logseq/basic/pages/: Foo.md  HeadingList.md
tests/fixtures/logseq/basic/whiteboards/: 597eb58-f6b8-45c5-b30d-a6f9ed15d354.edn
tests/golden/basic/: Foo.md  manifest.yml
tests/golden/basic/pages/: Foo.md
tests/golden/basic_opts/: Foo.md  HeadingList.md  manifest.yml
tests/golden/basic_opts/Daily Notes/: 2024-08-30.md
tests/golden/basic_opts/a/: b.md
tests/unit/: test_cli.py  test_planner.py  test_transforms.py
